<resources>
    <string name="app_name">moneymanagement</string>
    <string name="server_client_id">987081383035-95l6pht5vahpc8rpri3j6ns4eef3i977.apps.googleusercontent.com</string>
    <string name="facebook_app_id">997435027102984</string>
    <string name="fb_login_protocol_scheme">fb997435027102984</string>
    <string name="action_register">Lần đầu sử dụng PiBank</string>
    <string name="action_login">Đã sử dụng PiBank</string>
    <string name="title_home">Quản lý tài chính hiệu quả với PiBank</string>
    <string name="title_home_second">Quản lý chi tiêu cá nhân và hoàn thiện mục tiêu</string>
    <string name="title_home_third">tài chính</string>
    <string name="title_login">Đăng nhập</string>
    <string name="login_second_title">có sự cho phép của bạn</string>
    <string name="login_first_title">Chúng tôi sẽ không đăng thông mà không</string>
    <string name="login_loading">loading...</string>
    <string name="msg_login_fail">Bạn kiểm tra lại tài khoản và mật khẩu</string>
    <string name="msg_save_fail">Không thể lấy được thông tin của bạn</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="title_register">Đăng kí</string>
    <string name="msg_register_request">Yêu cầu bạn nhập đúng thông tin</string>
    <string name="msg_register_errorpassword">Mật khẩu của bạn phải lớn hơn 6 ký tự</string>
    <string name="title_out">Thoát</string>
    <string name="navigation_notification">notification</string>
    <string name="registration_empty_username">Bạn cần nhập đầy đủ thông tin</string>
    <string name="registration_empty_password">Bạn cần nhập đầy đủ thông tin</string>
    <string name="registration_empty_confirm_password">Bạn cần nhập đầy đủ thông tin</string>
    <string name="registration_confirm_password_error">Mật khẩu không trùng với nhập mật khẩu lại</string>
    <string name="title_statistics">Thống kê</string>
    <string name="title_income">Khoản thu</string>
    <string name="title_spending">Khoản chi</string>
    <string name="title_introduce">Giới thiệu</string>
    <string name="title_about">About</string>
    <string name="income_descripton_hint">Ghi chú</string>
    <string name="income_amount_hint">Số tiền</string>
    <string name="income_calendar_hint">Chọn ngày</string>
    <string name="title_add_income">Thêm khoản thu</string>
    <string name="menu_save">Lưu</string>
    <string name="msg_income_description">Yêu cầu bạn nhập đúng thông tin</string>
    <string name="msg_income_amount">Yêu cầu bạn nhập đúng thông tin</string>
    <string name="msg_income_time">Yêu cầu bạn nhập đúng thông tin</string>
    <string name="msg_income_create_succces">Bạn đã thêm thông tin thành công</string>
    <string name="title_delete">Bạn có muốn xóa không</string>
    <string name="msg_delele_succes">Bạn đã xóa thành công</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>
    <string name="statistics_this_month">Tháng này</string>
    <string name="statistics_last_month">Tháng trước</string>
    <string name="title_overview">Tổng quan</string>
    <string name="statistic_sum_income">Tổng thu:</string>
    <string name="statistic_sum_spending">Tổng chi:</string>
    <string name="statistic_sum_salary_gain">Tháng này bạn đã thu được:</string>
    <string name="statistic_sum_salary_reduce">Tháng này bạn đã lỗ mất:</string>
    <integer-array name="array_color">
        <item>@color/color_blue</item>
        <item>@color/color_red</item>
        <item>@color/color_light_blue</item>
        <item>@color/color_yellow</item>
        <item>@color/color_pink</item>
        <item>@color/color_orange</item>
        <item>@color/color_purple</item>
        <item>@color/color_green</item>
        <item>@color/color_light_green</item>
    </integer-array>
</resources>
